# LiveLog-AI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  config.yaml  gradle.properties  gradlew  launcher.py  pyproject.toml  settings.gradle.kts  start.bat  start.ps1
agent/: README.md  agent_server.py  build.bat  config.json  pc_sensor_config.json  requirements.txt
agent/pc_sensor/: __init__.py  idle_tracker.py  manager.py  uploader.py  window_tracker.py
agent/static/: pc_config.html
ai/: AGENTS.md  pyproject.toml
ai/agents/: 01-data-check.md  02-daily-review.md  03-biweekly-review.md  04-weekly-review.md  05-feedback-agent.md  06-study-coach.md
ai/analysis/: analyze_day.py  check_coverage.py  data_check.py  extract_timeline.py  fact_extractor.py  geocode_tool.py  segment_generator.py
ai/data/tasks/: 01-data-check-00.yaml  02-data-check-04.yaml  03-data-check-06.yaml  04-data-check-08.yaml  05-data-check-10.yaml  06-data-check-12.yaml  07-data-check-14.yaml  08-data-check-16.yaml  09-data-check-18.yaml  10-data-check-20.yaml  11-data-check-22.yaml  12-daily-review.yaml  13-biweekly-review.yaml  14-weekly-summary.yaml  15-study-coach-morning.yaml  16-study-coach-afternoon.yaml  17-study-coach-evening.yaml  AGENTS.md  check.py  data_check_scheduler.py  hello_production.py  music_tracker.py  session_compactor.py  test_trigger_task.py
app/: AGENTS.md  build.gradle.kts
app/docs/: band_data_collection_guide.md
backend/: AGENTS.md  _test_store.py  audio_processor.py  auth.py  main.py  models.py  requirements.txt  sigh_detector.py  sound_scene.py  speaker_diarization.py  vad_processor.py
backend/config/: agents.json  config.example.yaml  config.py  model_config.json  ssl_config.py
backend/core/: __init__.py  errors.py  log_setup.py  logging.py
backend/middleware/: __init__.py  auth_middleware.py
backend/routers/: AGENTS.md  __init__.py  (+18 more)
behavior/: README.md  verify.py
docs/: AI_SYSTEM.md  DATA_FORMAT.md
gradle/: libs.versions.toml
scripts/: compress_old_audio.py  test_all_audio.py
(+231 files in other folders)
